--- a/content/schedule/roomtracks.html
+++ b/content/schedule/roomtracks.html
@@ -6,7 +6,7 @@ sponsors_under_navigation: true
 <%
 # vim: set ft=eruby ts=2 sw=2 et ai:
 colors = 5
-$compressed_flatlist.each do |dayslug, flatlist_by_room|
+$track_flatlist.each do |dayslug, flatlist_by_room|
   d = $to_day.call(dayslug)
 %>
 <a name="<%= d[:slug] %>"></a><h2><%= d[:title] %></h2>
