--- a/content/schedule.html
+++ b/content/schedule.html
@@ -64,7 +64,7 @@ during the event.</p>
           <td><%= l e %></td>
             <td><%=
                 e[:speakers].map{|s| $item_by_id.fetch("/schedule/speaker/#{s}/")}.map do |s|
-                photo = s[:thumbnail] ? $item_by_id.fetch("/photos/thumbnail/#{s[:thumbnail].fetch(:slug)}/") : nil
+                photo = s[:thumbnail] ? $item_by_id.fetch("/thumbnail/#{s[:thumbnail].fetch(:slug)}/") : nil
                 text = ""
                 text << "<img class=\"thumb\" src=\"#{photo.path}\" width=\"#{s[:thumbnail].fetch(:width)}\" height=\"#{s[:thumbnail].fetch(:height)}\"/>" if photo
                 text << l(s)
