better page for rooms + page for buildings

--- a/content/schedule/roomtracks.html
+++ b/content/schedule/roomtracks.html
@@ -5,6 +5,9 @@ sponsors_under_navigation: true
 <p>For a less graphical and colorful overview of the rooms and the tracks that are held in them, respectively, you may <a href="<%= pathof '/schedule/rooms/' %>">look at this page instead</a>.
 <%
 # vim: set ft=eruby ts=2 sw=2 et ai:
+
+buildings_path = $item_by_id.fetch('/schedule/buildings/').path
+
 $track_flatlist.each do |dayslug, flatlist_by_room|
   d = $to_day.call(dayslug)
 %>
@@ -57,7 +60,7 @@ $track_flatlist.each do |dayslug, flatlist_by_room|
     %>
       <tr<% unless tr_classes.empty? %> class="<%= tr_classes.join(" ") %>"<% end %>>
         <% if bri == 1 %>
-        <th rowspan="<%= building_row_height %>" class="building"><%= room[:building] %></th>
+        <th rowspan="<%= building_row_height %>" class="building"><a href="<%= buildings_path %>#<%= room[:building].downcase %>"><%= room[:building] %></a></th>
         <% end %>
         <% if cells_list.size > 1 %>
         <% if row < 1 %>
