--- a/content/mobile.html
+++ b/content/mobile.html
@@ -2,6 +2,7 @@
 title: FOSDEM Mobile
 layout: mobile
 ---
+<% # vim: set ts=2 sw=2 ai et ft=eruby: %>
 <div data-role="page">
 	<div data-role="header">
         <h1><%= conference()[:title] %></h1>
@@ -32,6 +33,7 @@ layout: mobile
 
 <%
 more_tracks = []
+days_tracks = []
 
 [
     {id: "keynotes",       heading: "Keynotes",        type: "keynote"      },
@@ -42,6 +44,15 @@ more_tracks = []
 ].each do |duty|
     list = tracks.select{|t| t[:type] == duty[:type]}
     count = list.size
+    days = begin
+             l = []
+             list.each do |t|
+               t[:events_by_day].each do |d, events|
+                 l << d unless events.nil? or events.empty?
+               end
+             end
+             l.uniq.map(&$to_day).sort_by{|d| d[:rank]}.map{|d| d[:title]}
+           end
 %>
 <div data-role="page" id="<%= duty[:id] %>">
     <div data-role="header">
@@ -50,20 +61,20 @@ more_tracks = []
     <div data-role="content">
         <ul data-role="listview" data-inset="false">
         <%
-            if count < 2
-                events = list.first[:events].map &$to_event
-                events.each do |event|
+            if count < 2 and days.size < 2
+              events = list.first[:events].map &$to_event
+              events.each do |event|
         %>
-            <li><a href="#event-<%= event[:slug] %>"><%= event[:title] %></a></li>
+        <li><a href="#event-<%= event[:slug] %>"><%= event[:title] %></a></li>
         <%
-                end #event
+              end #event
             else
-                list.each do |track|
-                    more_tracks << track
+              list.each do |track|
+                more_tracks << track
         %>
-            <li><a href="#track-<%= track[:slug] %>"><%= track[:name] %></a></li>
+        <li><a href="#track-<%= track[:slug] %>"><%= track[:name] %></a></li>
         <%
-                end #list
+              end #list
             end #if count
         %>
         </ul>
@@ -74,7 +85,9 @@ end #duty
 %>
 
 <%
+days_tracks = []
 more_tracks.each do |track|
+  days = track[:events_by_day].keys.map(&$to_day).sort_by{|d| d[:rank]}
 %>
 <div data-role="page" id="track-<%= track[:slug] %>">
     <div data-role="header">
@@ -82,78 +95,54 @@ more_tracks.each do |track|
     </div>
     <div data-role="content">
         <ul data-role="listview" data-inset="false">
-        <%
-            track[:events_by_day].each do |d, eventslugs|
-                day = $item_by_id.fetch "/schedule/day/#{d}/"
-                eventcount = eventslugs.map(&$to_event).size
-        %>
+<%
+  if days.size < 2
+    events = track[:events].map &$to_event
+    events.each do |event|
+  %>
+            <li><a href="#event-<%= event[:slug] %>"><%= event[:title] %></a></li>
+  <%
+    end #event
+  else
+    days.each do |day|
+      days_tracks << track
+      eventcount = track[:events_by_day].fetch(day[:slug], []).size
+%>
             <li><a href="#track-<%= track[:slug] %>-<%= day[:slug] %>"><%= day[:title] %> (<%= eventcount %>)</a></li>
-        <%
-            end #track.each
-        %>
+<%
+    end #day
+  end #days.size
+%>
         </ul>
     </div>
 </div>
-
-<%
-    slices = []
-
-    track[:events_by_day].each do |d, eventslugs|
-        day = $item_by_id.fetch "/schedule/day/#{d}/"
-        events = eventslugs.map(&$to_event)
-        if events.size > 8
-            start_times = events.map{|event| event[:start_time]}.uniq
-%>
-<div data-role="page" id="track-<%= track[:slug] %>-<%= day[:slug] %>">
-    <div data-role="header">
-        <h1><%= track[:name] %>: <%= day[:title] %></h1>
-    </div>
-    <div data-role="content">
-        <ul data-role="listview" data-inset="false">
-        <%
-            start_times.each_slice(2).each_cons(2) do |p|
-                start_times_slice = p.first
-                next_up = p.last
-                s = start_times_slice.first
-                e = next_up.first
-                id = s.gsub /:/, ''
-
-                slice_events = events.select{|event| start_times_slice.include? event[:start_time]}
-
-                slices << { id: id, start: s, :end => e, events: slice_events }
-        %>
-            <li><a href="#track-<%= track[:slug] %>-<%= day[:slug] %>-<%= id %>"><%= s %> - <%= e %> (<%= slice_events.size %>)</a></li>
-        <%
-            end #start_times_slice
-        %>
-        </ul>
-    </div>
-</div>
-<%
-        else
-%>
-<div data-role="page" id="track-<%= track[:slug] %>-<%= day[:slug] %>">
-    <div data-role="header">
-        <h1><%= track[:name] %>: <%= day[:title] %></h1>
-    </div>
-    <div data-role="content">
-        <ul data-role="listview" data-inset="false">
-        <%
-            events.sort_by{|event| [event[:start_time], event[:room_rank]]}.each do |event|
-        %>
-            <li><a href="#event-<%= event[:slug] %>"><%= event[:start_time] %>: <%= event[:room_name] %>: <%= event[:title] %></a></li>
-        <%
-            end #events
-        %>
-        </ul>
-    </div>
-</div>
-<%
-        end #if
-    end #track.each
-%>
 <%
 end #more_track.each
+
+days_tracks.each do |track|
+  days = track[:events_by_day].keys.map(&$to_day).sort_by{|d| d[:rank]}
+  days.each do |day|
+%>
+<div data-role="page" id="track-<%= track[:slug] %>-<%= day[:slug]%>">
+    <div data-role="header">
+        <h1>Tracks: <%= track[:name] %>: <%= day[:title] %></h1>
+    </div>
+    <div data-role="content">
+        <ul data-role="listview" data-inset="false">
+        <%
+          events = track[:events_by_day].fetch(day[:slug], []).map(&$to_event)
+          events.each do |event|
+        %>
+            <li><a href="#event-<%= event[:slug] %>"><%= event[:title] %></a></li>
+        <%
+          end #event
+        %>
+        </ul>
+    </div>
+</div>
+<%
+  end #days
+end #days_tracks
 %>
 
 </body>
