--- a/content/practical/index.html
+++ b/content/practical/index.html
@@ -2,4 +2,14 @@
 title: Practical Information
 navcat: true
 ---
-<%= sub %>
+<h3>Before the Event</h3>
+<ul>
+    <li><%= l('/practical/accommodation/') %></li>
+    <li><%= l('/practical/transportation/') %></li>
+</ul>
+<h3>During the Event</h3>
+<ul>
+    <li><%= l('/practical/beerevent/') %></li>
+    <li><%= l('/practical/services/', 'services') %></li>
+    <li><%= l('/practical/catering/') %></li>
+</ul>
