--- a/content/schedule/events.html
+++ b/content/schedule/events.html
@@ -1,8 +1,19 @@
 ---
 title: Events
 sponsors_under_navigation: true
+titlehead: false
 ---
-<% i = 0 %>
+<%
+h = begin
+      h = {}
+      tracks.reject(&$empty_track).sort_by{|t| [t[:rank], t[:conference_track_id]]}.each do |t|
+        h[t] = t[:events].map(&$to_event)
+      end
+      h
+    end
+size = h.values.map(&:size).inject(:+)
+%>
+<h1><%= size %> Events</h1>
 <table class="table table-striped table-bordered table-condensed">
     <thead>
         <tr>
@@ -15,14 +26,11 @@ sponsors_under_navigation: true
         </tr>
     </thead>
     <tbody>
-        <% tracks.reject(&$empty_track).sort_by{|t| [t[:rank], t[:conference_track_id]]}.each do |track| %>
+      <% h.each do |track, list| %>
         <tr>
-            <td colspan="6"><h4><%= track[:title] %></h4></td>
+          <td colspan="6"><h4><%= track[:title] %> (<%= list.size %>)</h4></td>
         </tr>
-        <%
-        track[:events].map(&$to_event).each do |e|
-        i += 1
-        %>
+        <% list.each do |e| %>
         <tr>
             <td><%= l(e) %></a></td>
             <td><%= l e[:speakers].map(&$to_speaker) %></td>
@@ -35,4 +43,3 @@ sponsors_under_navigation: true
         <% end %>
     </tbody>
 </table>
-<p>Events: <%= i %></p>
