also include search box in search results page

--- a/content/searcherview.html
+++ b/content/searcherview.html
@@ -4,6 +4,6 @@ kind: internal
 navigation_erb_injection_before: '@search_navigation'
 head_erb_injection: '@head'
 nohead: true
-no_search: true
+search_inject_variable: '@q'
 ---
 <%%= yield %>
