--- a/content/index.html
+++ b/content/index.html
@@ -10,7 +10,7 @@ visual: true
     <div class="sponsors-block">
         <div class="text-block">
             <h2>FOSDEM is a free event that offers open source communities a place to meet, share ideas and collaborate.</h2>
-            <p>It is renowed for being highly developer-oriented and brings together 5000+ geeks from all over the world.</p>
+            <p>It is renowned for being highly developer-oriented and brings together 5000+ geeks from all over the world.</p>
         </div>
         <div class="logo-block">
             <h3>SPONSORS</h3>
