--- a/content/index.html
+++ b/content/index.html
@@ -7,7 +7,7 @@ breadcrumbs: false
 visual: true
 ---
 <div id="main">
-    <div class="sponsors-block">
+    <div class="s-block">
         <div class="text-block">
             <h2>FOSDEM is a free event that offers open source communities a place to meet, share ideas and collaborate.</h2>
             <p>It is renowned for being highly developer-oriented and brings together 5000+ geeks from all over the world.</p>
