--- a/content/contact.html
+++ b/content/contact.html
@@ -10,6 +10,12 @@ title: Contact
 
 <p>You may also join us for a chat in <a href="irc://irc.freenode.net/fosdem">the #fosdem channel on freenode</a>.</p>
 
+<p>For sponsorship inquiries <u><b>only</b></u>, please contact:</p>
+<ul>
+    <li><a href="mailto:sponsors@fosdem.org">sponsors@fosdem.org</a> (preferred)</li>
+    <li>Philip Paeps, <span class="tel">+32 486 114 720</span>, <a href="mailto:philip@fosdem.org">philip@fosdem.org</a> (NL, EN, FR)</li>
+</ul>
+
 <p>For press inquiries <u><b>only</b></u>, please contact:</p>
 <ul>
     <li>Mark Van den Borre, <span class="tel">+32 486 961726</span>, <a href="mailto:mvandenborre@fosdem.org">mvandenborre@fosdem.org</a> (NL, EN)</li>
